# src/api/api.go
@@ -38,17 +38,28 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 	api := r.Group("/api")
 	v1 := api.Group("/v1")
 	{
+		// Test
 		health := v1.Group("/health")
 		test_router := v1.Group("/test", /*middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}) */)
+
+		// User
 		users := v1.Group("/users")
+
+		// Base
 		countries := v1.Group("/countries", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		cities := v1.Group("/cities", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		files := v1.Group("/files", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 
 		routers.Health(health)
 		routers.TestRouter(test_router)
+
+		// User
 		routers.User(users, cfg)
+
+		// Base
 		routers.Country(countries, cfg)
 		routers.City(cities, cfg)
+		routers.File(files, cfg)
 
 	}
 
