# src/api/handlers/cities.go
@@ -27,13 +27,13 @@ func NewCityHandler(cfg *config.Config) *CityHandler {
 // @Tags Cities
 // @Accept json
 // @produces json
-// @Param Request body dto.CreateUpdateCityRequest true "Create a City"
+// @Param Request body dto.CreateCityRequest true "Create a City"
 // @Success 201 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
 // @Failure 400 {object} helper.BaseHttpResponse "Bad request"
 // @Router /v1/cities/ [post]
 // @Security AuthBearer
 func (h *CityHandler) Create(c *gin.Context) {
-	req := dto.CreateUpdateCityRequest{}
+	req := dto.CreateCityRequest{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest,
@@ -57,14 +57,14 @@ func (h *CityHandler) Create(c *gin.Context) {
 // @Accept json
 // @produces json
 // @Param id path int true "Id"
-// @Param Request body dto.CreateUpdateCityRequest true "Update a City"
+// @Param Request body dto.UpdateCityRequest true "Update a City"
 // @Success 200 {object} helper.BaseHttpResponse{result=dto.CityResponse} "City response"
 // @Failure 400 {object} helper.BaseHttpResponse "Bad request"
 // @Router /v1/cities/{id} [put]
 // @Security AuthBearer
 func (h *CityHandler) Update(c *gin.Context) {
 	id, _ := strconv.Atoi(c.Params.ByName("id"))
-	req := dto.CreateUpdateCityRequest{}
+	req := dto.UpdateCityRequest{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest,
